# consumos

./: CMakeLists.txt
include/: ADS1263.h  DEV_Config.h  daqhats.h  daqhats_utils.h  mcc128.h  mcc_scan.h
scripts/: Unpack.py  fft11.py  sender.py
src/: ADS1263.c  DEV_Config.c  continuous_scan.c  fftC.c  main.c  mcc128.c  mcc_comm.c  mcc_file.c  udp-client.c  udp-server.c
